syntax = "proto3";

package service;
option csharp_namespace = "DVS.Common";

service SunCenter {
          rpc TokenVerify (Request) returns (Reply) {}
          rpc SendSms (Request) returns (Reply) {}
          rpc Integral (Request) returns (Reply) {}
          rpc UserInfo (Request) returns (Reply) {}
          rpc Any(Request)returns(Reply){}
}

message Request {
          string parameters = 1;
}

message Reply {
          string data = 1;
}
